<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OmniDebt</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

	<!-- Common Hints -->
    <string name="hint_login">Login</string>
    <string name="hint_passwd">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_signup">Sign Up</string>

	<!-- LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="radio_remember_me">Connect automaticaly at startup</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_cancel_connection">Cancel</string>
    <string name="button_accept_connection">Login</string>
    <string name="login_wrong_ids">Login or password incorrect</string>
    <string name="login_failed">Problem to connect to server</string>
    <string name="login_unkown_error">Unknown error</string>
    <string name="login_trying_login">Connection ...</string>

	<!-- SignUpActivity -->
    <string name="title_activity_signup">SignUp</string>
    <string name="signup_error_used_login">The login you have chosen is already in use.</string>
    <string name="signup_invalid_email">The email address you entered is invalid</string>
    <string name="signup_pwd_different_cpwd">The values entered in Password and Confirm Password must be the same</string>

	<!-- MainODActivity -->
    <string name="title_activity_main_od">Main Menu</string>

    <!-- Drawer -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string-array name="drawer_content">
        <item>Summary</item>
        <item>Contacts</item>
        <item>History</item>
        <item>About</item>
	</string-array>
    <string-array name="non_top_level_fragments">
        <item>Add Contact</item>
        <item>Add Debt</item>
        <item>Contact Infos</item>
        <item>Select Contact</item>
        <item>Pay Debt</item>
    </string-array>
	<string name="title_activity_dashboard">Dashboard</string>
	<string name="dashboard_dashboard">Dashboard</string>
	<string name="dashboard_debt_owned">Debt Owned</string>
	<string name="dashboard_debt_owed">Debt Owed</string>
	<string name="dashboard_balance">Balance</string>
	<string name="dashboard_payment">Payment</string>

	<!-- AboutActivity -->
    <string name="title_activity_about">About</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="contact_name">Contact Name</string>
    <string name="button_cancel">Cancel</string>
    <string name="remove">Remove</string>
    
    <!-- Add Contact -->
    <string name="contact_already">Contact already in your list</string>
    <string name="unknown_contact">Unknown contact, check the name</string>
    <string name="dashboard_add_debt">Add Debt</string>
    <string name="add_debt_button">Add Debt</string>
    <string name="add_debt_hint">Amount</string>

</resources>
