<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <View android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contact_name" >

        <requestFocus />
    </EditText>
    
	<View android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_weight="1" />

	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >
    
		<Button
		    android:id="@+id/button_add_contact"
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/add_contact" />
		
		<Button
		    android:id="@+id/button_cancel"
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/button_cancel" />

	</LinearLayout>
	
	<View android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_weight="1" />

</LinearLayout>